--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "firebase": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -18,7 +19,9 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^5.3.1",
+    "source-map-loader": "^2.0.1",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
