--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "private": true,
   "license": "BSD-2-Clause",
   "scripts": {
-    "start": "webpack serve --mode development --open --hot --port 3000",
+    "start": "webpack serve --mode development --open --hot",
     "build-dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "firebase": "^8.3.1",
+    "mnemonic-words": "^1.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-multi-date-picker": "^2.4.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
