--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "@svgr/webpack": "^5.5.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.4",
     "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^5.3.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
     "source-map-loader": "^2.0.1",
-    "webpack": "^5.28.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
