--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "firebase": "^8.3.1",
+    "firebase": "^9.0.0-beta.2",
     "mnemonic-words": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
