--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
     "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^5.3.1",
     "node-sass": "^5.0.0",
+    "postcss-loader": "^6.1.0",
     "sass-loader": "^11.0.1",
     "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
