--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.13.13",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.4",
     "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^5.3.1",
