--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "css-loader": "^5.2.4",
     "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^5.3.1",
-    "node-sass": "^6.0.1",
     "postcss-loader": "^6.1.0",
+    "sass": "^1.42.1",
     "sass-loader": "^11.0.1",
     "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
