--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "webpack serve --mode development --open --hot",
     "build-dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
     "firebase": "^9.0.0-beta.2",
