--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mnemonic-words": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-multi-date-picker": "^2.9.8",
     "react-router-dom": "^5.2.0"
   },
