--- a/firebase.json
+++ b/firebase.json
@@ -12,21 +12,42 @@
         "destination": "/index.html"
       }
     ],
-    "headers": [{
-      "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" }
-      ]
-    }, {
-      "source": "**",
-      "headers": [
-        { "key": "Content-Security-Policy-Report-Only", "value": "base-uri 'self'; connect-src 'self' https://firestore.googleapis.com; default-src 'self'; font-src 'self' https://fonts.gstatic.com; frame-src 'self'; img-src 'self'; manifest-src 'self'; media-src 'self'; object-src 'none'; report-uri https://6154fb0d14681bacfabccb45.endpoint.csper.io/; script-src 'report-sample' 'self'; style-src 'report-sample' 'self' https://fonts.googleapis.com; worker-src 'none';" },
-        { "key": "X-Frame-Options", "value": "deny" },
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "X-XSS-Protection", "value": "1; mode=block" },
-        { "key": "Referrer-Policy", "value": "no-referrer" }
-      ]
-    }]
+    "headers": [
+      {
+        "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      },
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Content-Security-Policy-Report-Only",
+            "value": "base-uri 'self'; connect-src 'self' https://firestore.googleapis.com; default-src 'self'; font-src 'self' https://fonts.gstatic.com; frame-src 'self'; img-src 'self'; manifest-src 'self'; media-src 'self'; object-src 'none'; report-uri https://6154fb0d14681bacfabccb45.endpoint.csper.io/; script-src 'report-sample' 'self'; style-src 'report-sample' 'self' https://fonts.googleapis.com; worker-src 'none';"
+          },
+          {
+            "key": "X-Frame-Options",
+            "value": "deny"
+          },
+          {
+            "key": "X-Content-Type-Options",
+            "value": "nosniff"
+          },
+          {
+            "key": "X-XSS-Protection",
+            "value": "1; mode=block"
+          },
+          {
+            "key": "Referrer-Policy",
+            "value": "no-referrer"
+          }
+        ]
+      }
+    ]
   },
   "emulators": {
     "hosting": {
@@ -35,5 +56,8 @@
     "ui": {
       "enabled": true
     }
+  },
+  "functions": {
+    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
   }
 }
