--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack serve --mode development --open --hot",
     "build-dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "deploy": "firebase deploy --only hosting"
+    "deploy": "firebase deploy --only hosting",
+    "deployFunctions": "firebase deploy --only functions"
   },
   "dependencies": {
     "firebase": "^9.0.0-beta.2",
